langtools/test/tools/javac/typeAnnotations/failures/common/arrays/DuplicateTypeAnnotation.out
DuplicateTypeAnnotation.java:11:15: compiler.err.duplicate.annotation
1 error
